[gd_scene load_steps=21 format=3 uid="uid://ci0n0x2n6hhae"]

[ext_resource type="Theme" uid="uid://cem70aixclxe2" path="res://assets/UI/Theme.tres" id="1_74djn"]
[ext_resource type="Script" path="res://assets/characters/characterSelect.gd" id="2_alq64"]
[ext_resource type="Texture2D" uid="uid://ba38k1eoqepml" path="res://assets/characters/icons/icon1.png" id="2_d83vl"]
[ext_resource type="Texture2D" uid="uid://b4g6ofohy2im4" path="res://assets/characters/icons/icon2.png" id="3_vguv3"]
[ext_resource type="Texture2D" uid="uid://chu48ibvw80yj" path="res://assets/characters/icons/icon3.png" id="4_nhb8q"]
[ext_resource type="Texture2D" uid="uid://82nmovk58bsj" path="res://assets/characters/icons/icon4.png" id="5_w2qh7"]
[ext_resource type="Texture2D" uid="uid://dpj3cdr4urvfk" path="res://assets/characters/icons/icon5.png" id="6_4owau"]
[ext_resource type="Texture2D" uid="uid://bephspbhw7l1a" path="res://assets/characters/icons/icon6.png" id="7_hxt0j"]
[ext_resource type="Texture2D" uid="uid://0etq55w18ovw" path="res://assets/characters/icons/icon7.png" id="8_41we8"]
[ext_resource type="Texture2D" uid="uid://cef42d8cruxcq" path="res://assets/characters/icons/icon8.png" id="9_flxbh"]
[ext_resource type="Texture2D" uid="uid://bklyw7xffav0d" path="res://assets/characters/icons/icon9.png" id="10_4uu0o"]
[ext_resource type="AudioStream" uid="uid://dj7i4pc6smqd5" path="res://assets/characters/audio/loafshark.wav" id="12_j50ba"]
[ext_resource type="AudioStream" uid="uid://1tims056ybf3" path="res://assets/characters/audio/mrphrog.wav" id="13_gshke"]
[ext_resource type="AudioStream" uid="uid://cyptpldee8v74" path="res://assets/characters/audio/kingkame.wav" id="14_anor5"]
[ext_resource type="AudioStream" uid="uid://46af462uw1xv" path="res://assets/characters/audio/quintonquickjr.wav" id="15_bkyqk"]
[ext_resource type="AudioStream" uid="uid://bwckq2ro8wabk" path="res://assets/characters/audio/bananawizard.wav" id="16_ippw8"]
[ext_resource type="AudioStream" uid="uid://c4lc7xlqkac7o" path="res://assets/characters/audio/antenna.wav" id="17_yav3c"]
[ext_resource type="AudioStream" uid="uid://cjwh30nsf27gh" path="res://assets/characters/audio/rockethead.wav" id="18_5ipwx"]
[ext_resource type="AudioStream" uid="uid://72lh2pvslq1p" path="res://assets/characters/audio/soulcatguy.wav" id="19_vrdx5"]
[ext_resource type="AudioStream" uid="uid://di1gkf8pnhc6" path="res://assets/characters/audio/kokonutmilk.wav" id="20_iavqj"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_74djn")
script = ExtResource("2_alq64")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -206.0
offset_right = 52.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
allow_reselect = true
item_count = 9
max_columns = 3
same_column_width = true
icon_mode = 0
icon_scale = 3.0
item_0/icon = ExtResource("2_d83vl")
item_1/icon = ExtResource("3_vguv3")
item_2/icon = ExtResource("4_nhb8q")
item_3/icon = ExtResource("5_w2qh7")
item_4/icon = ExtResource("6_4owau")
item_5/icon = ExtResource("7_hxt0j")
item_6/icon = ExtResource("8_41we8")
item_7/icon = ExtResource("9_flxbh")
item_8/icon = ExtResource("10_4uu0o")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.5
offset_top = 116.5
offset_right = -16.5
offset_bottom = 196.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
disabled = true
text = "Start
"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -211.0
offset_right = 318.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -15.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Choose a character and start the race!

WASD - Drive + Turn
E/Enter - Use Item

To unlock more characters, you must defeat them in battle!
Can you collect them all?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Credits" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 102.0
offset_top = 89.0
offset_right = 273.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -15.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits:
Jawdandev
RamenRonin
HJMW"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Announcer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_j50ba")

[node name="Announcer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_gshke")

[node name="Announcer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_anor5")

[node name="Announcer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_bkyqk")

[node name="Announcer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ippw8")

[node name="Announcer6" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_yav3c")

[node name="Announcer7" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_5ipwx")

[node name="Announcer8" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_vrdx5")

[node name="Announcer9" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_iavqj")

[connection signal="item_selected" from="ItemList" to="." method="onSelect"]
[connection signal="pressed" from="Button" to="." method="onStart"]
